@@ -268,8 +268,15 @@ void MyServer::Advise()
     {
         const wxDateTime now = wxDateTime::Now();
 
-        m_connection->Advise(m_connection->m_advise, now.Format());
+        wxString str = wxString::FromUTF8("\xd0\x9f\xd1\x80\xd0\xb8\xd0\xb2\xd0\xb5\xd1\x82");
+        m_connection->Advise(m_connection->m_advise, str + " (using UTF-8)");
 
+        str += " (using wchar_t)";
+        m_connection->Advise(m_connection->m_advise,
+                             str.wc_str(), (str.length() + 1)*sizeof(wchar_t),
+                             wxIPC_UNICODETEXT);
+
+        // This one uses wxIPC_TEXT by default.
         const wxString s = now.FormatTime() + " " + now.FormatDate();
         m_connection->Advise(m_connection->m_advise, s.mb_str(), wxNO_LEN);
 
